<resources>
    <string name="app_name">chutunglam</string>
    <string name="enter_feedback_detail_to_send_to_the_developer">Enter Feedback Detail To Send To The Developer !</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="would_you_like_an_email_response">Would you like an email response?</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>